Created and added global-footer.less & global-navigation.less to main.less

--- a/less/main.less
+++ b/less/main.less
@@ -3,7 +3,5 @@
 @import "vendor/elements.less";
 @import "colors.less";
 
-p {
-  .opacity(0.2);
-  color: @best-color;
-}
+@import "global-navigation.less";
+@import "global-footer.less";
