--- a/less/main.less
+++ b/less/main.less
@@ -13,6 +13,7 @@
 
 @import "vendor/elements.less";
 @import "colors.less";
+@import "mission-section.less";
 
 @import "gallery-section.less";
 @import "global-navigation.less";
