made thumbnails into buttons added bio pages

--- a/css/main.css
+++ b/css/main.css
@@ -10,3 +10,13 @@
 #gallery-section {
   background-color: red;
 }
+
+/*bios page*/
+
+body {
+  background-color: white;
+  background-width: 20%;
+  background-position: center 100px;
+  background-attachment: fixed;
+  background-repeat: repeat-x;
+}
