linked bios-page.less to main.less, alpha order for includes

--- a/less/main.less
+++ b/less/main.less
@@ -15,6 +15,7 @@
 @import "colors.less";
 @import "mission-section.less";
 
+@import "bios-page.less";
 @import "gallery-section.less";
-@import "global-navigation.less";
 @import "global-footer.less";
+@import "global-navigation.less";
