this doesn't really need to be that specific, #bios-page will do

--- a/less/bios-page.less
+++ b/less/bios-page.less
@@ -1,6 +1,6 @@
 // main: main.less
 
-body#bios-page {
+#bios-page {
   background-color: white;
   background-width: 20%;
   background-position: center 100px;
