--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 #mission-section {
   color: blue;
 }
-body#bios-page {
+#bios-page {
   background-color: white;
   background-width: 20%;
   background-position: center 100px;
