just a little CSS commenting

--- a/less/bios-page.less
+++ b/less/bios-page.less
@@ -1,6 +1,7 @@
 // main: main.less
 
 #bios-page {
+  // put all the CSS for the bios page here
   background-color: white;
   background-width: 20%;
   background-position: center 100px;
