--- a/less/gallery-section.less
+++ b/less/gallery-section.less
@@ -1,5 +1,6 @@
 // main: main.less
 
 #gallery-section {
+  // put all the CSS for the homepage gallery section here
   background-color: @best-color;
 }
