--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,9 @@
 #gallery-section {
   background-color: red;
 }
+#global-footer {
+  background-color: blue;
+}
+#global-navigation {
+  background-color: peachpuff;
+}
