--- a/less/bios-page.less
+++ b/less/bios-page.less
@@ -3,8 +3,11 @@
 #bios-page {
   // put all the CSS for the bios page here
   background-color: white;
-  background-width: 20%;
-  background-position: center 100px;
-  background-attachment: fixed;
-  background-repeat: repeat-x;
+
+}
+
+body {
+
+  background-image: url("../images/bios/backgroundbio.png");
+  background-size: 100%;
 }
