--- a/less/bios-page.less
+++ b/less/bios-page.less
@@ -6,8 +6,30 @@
 
 }
 
+.clearfix:after {
+   content: " "; /* Older browser do not support empty content */
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+}
+
+
 body {
 
   background-image: url("../images/bios/backgroundbio.png");
-  background-size: 100%;
+  background-color: #f2f2f2;
+  background-size: 120%;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+span {
+  display: block;
+}
+
+.content {
+  margin-left: 5%;
+  image: 10%;
 }
