Connected who section to main.less file
Added the code to the main.less file to connect it with the who section.

--- a/less/main.less
+++ b/less/main.less
@@ -14,6 +14,7 @@
 @import "vendor/elements.less";
 @import "colors.less";
 @import "mission-section.less";
+@import "who-section.less";
 
 @import "bios-page.less";
 @import "gallery-section.less";
