--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,6 @@
 }
 body {
   background-image: url("../images/bios/backgroundbio.png");
-  background-color: #f2f2f2;
   background-size: 120%;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -28,6 +27,9 @@ body {
 }
 span {
   display: block;
+}
+.background {
+  background-color: black;
 }
 .content {
   margin-left: 5%;
