--- a/less/bios-page.less
+++ b/less/bios-page.less
@@ -18,7 +18,6 @@
 body {
 
   background-image: url("../images/bios/backgroundbio.png");
-  background-color: #f2f2f2;
   background-size: 120%;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -27,6 +26,10 @@ body {
 
 span {
   display: block;
+}
+
+.background {
+  background-color: black;
 }
 
 .content {
