Temporarily made font color white so I can see it against the blue

--- a/less/global-footer.less
+++ b/less/global-footer.less
@@ -3,4 +3,5 @@
 #global-footer {
   // put all the CSS for the global footer here
   background-color: blue;
+  color: white; //temporary font color so I can see against the blue
 }
