tested the less file
tested to see if the less file was linked to the html

--- a/less/main.less
+++ b/less/main.less
@@ -20,3 +20,4 @@
 @import "gallery-section.less";
 @import "global-footer.less";
 @import "global-navigation.less";
+@import "individual-works.less";
