fixed background so it only shows up in bio

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 #bios-page {
   background-color: white;
 }
-.clearfix:after {
+#bios-page .clearfix:after {
   content: " ";
   /* Older browser do not support empty content */
   visibility: hidden;
@@ -18,20 +18,20 @@
   height: 0;
   clear: both;
 }
-body {
+#bios-page body {
   background-image: url("../images/bios/backgroundbio.png");
   background-size: 120%;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
 }
-span {
+#bios-page span {
   display: block;
 }
-.background {
+#bios-page .background {
   background-color: black;
 }
-.content {
+#bios-page .content {
   margin-left: 5%;
   image: 10%;
 }
