initial css gallery landing creation

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,9 @@ span {
   margin-left: 5%;
   image: 10%;
 }
+#gallery-page {
+  background-color: pink;
+}
 #gallery-section {
   background-color: red;
 }
