--- a/less/gallery-section.less
+++ b/less/gallery-section.less
@@ -4,3 +4,9 @@
   // put all the CSS for the homepage gallery section here
   background-color: @best-color;
 }
+
+img {
+  max-width: 300px;
+  max-height: auto;
+  display: block;
+}
