--- a/css/main.css
+++ b/css/main.css
@@ -35,13 +35,12 @@
 #gallery-page {
   background-color: pink;
 }
+#gallery-page img {
+  max-width: 300px;
+  margin: 0 auto;
+}
 #gallery-section {
   background-color: red;
-}
-img {
-  max-width: 300px;
-  max-height: auto;
-  display: block;
 }
 #global-footer {
   background-color: blue;
