--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
   color: blue;
 }
 #bios-page {
-  background-image: url("../images/bios/backgroundbio.png");
+  background-image: url("../images/bios/backgroundbio.jpg");
   background-size: 120%;
   background-attachment: fixed;
   background-repeat: no-repeat;
