--- a/less/bios-page.less
+++ b/less/bios-page.less
@@ -3,7 +3,7 @@
 #bios-page {
   // put all the CSS for the bios page here
 
-  background-image: url("../images/bios/backgroundbio.png");
+  background-image: url("../images/bios/backgroundbio.jpg");
   background-size: 120%;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -16,11 +16,6 @@
      height: 0;
      clear: both;
   }
-
-
-
-
-
 
 
   span {
