Picked tentative colors

--- a/less/who-section.less
+++ b/less/who-section.less
@@ -6,7 +6,7 @@
     width: 20%;
     float: left;
     text-align: center;
-    background-color: orange;
+    background-color: #724b65;
 
     img {
       width: 128px;
@@ -14,13 +14,30 @@
     }
   }
 
-  .Treasurer-Profile-Link {
-      width: 320px;
-      padding: 10px;
-      border: 30px solid gray;
-      margin: 0;
+  a {
+    color: #a2a4a1;
+    font-family: 'Source Sans Pro', sans-serif;
+    text-decoration: none;
+    width: 320px;
+    padding: 10px;
+    border: 2px solid #a2a4a1;
+    margin: 0;
+
   }
 
+  a:hover {
+    color: #000000;
+
+  }
+
+  .main-text {
+    color: #a092a1;
+    font-size: 23px;
+  }
+
+.subtext {
+  color: #36112a;
+}
 
 
 }
