--- a/less/gallery-section.less
+++ b/less/gallery-section.less
@@ -3,38 +3,62 @@
 #gallery-section {
   // put all the CSS for the homepage gallery section here
   background-color: @best-color;
-}
-<<<<<<< HEAD
 
-img {
-  max-width: 300px;
-  max-height: auto;
-  display: block;
-}
 
-#carousel {
-  nav {
-    float: right;
-    margin-top: 8px;
+  // CAROUSEL NAV CSS FORMATTING
 
-    a {
+  #carousel {
+
+    nav {
+      float: right;
+      margin-top: 8px;
+
+      a {
+        float: left;
+        width: 9px;
+        height: 9px;
+        margin-left: 15px;
+        border: 1px solid #9a9b9c;
+        border-radius: 20px;
+        background-color: #fff;
+        transition: background-color .2s ease-out;
+        -webkit-transition: background-color .2s ease-out;
+        -moz-transition: background-color .2s ease-out;
+
+        &:hover {
+          background-color: #dddfe0;
+        }
+
+        &.active {
+          background-color: #9a9b9c;
+        }
+      }
+    }
+  }
+
+
+  // CAROUSEL INNER CSS FORMATTING
+
+  #carousel .inner {
+    clear: left;
+    width: 650px;
+    height: 650px;
+    overflow: hidden;
+  }
+
+  #carousel ul {
+    width: 2600px;
+
+    li {
+      position: relative;
       float: left;
-      width: 9px;
-      height: 9px;
-      margin-left: 15px;
-      border: 1px solid #9a9b9c;
-      border-radius: 20px;
-      background-color: #fff;
-      transition: background-color .2s ease-out;
-      -webkit-transition: background-color .2s ease-out;
-      -moz-transition: background-color .2s ease-out;
+
+      // div {
+      //   position: absolute;
+      //   bottom: 30px;
+      //   width: 100%;
+      //   padding: 12px 0;
+      // }
     }
   }
 }
-
-#carousel ul li {
-  psotion: relative;
-  float: left;
-}
-=======
->>>>>>> origin/master
