--- a/less/main.less
+++ b/less/main.less
@@ -17,6 +17,8 @@
 @import "who-section.less";
 
 @import "bios-page.less";
+@import "gallery-page.less";
 @import "gallery-section.less";
 @import "global-footer.less";
 @import "global-navigation.less";
+@import "individual-works.less";
