--- a/less/main.less
+++ b/less/main.less
@@ -21,4 +21,5 @@
 @import "gallery-section.less";
 @import "global-footer.less";
 @import "global-navigation.less";
+@import "individual-bios.less";
 @import "individual-works.less";
