gave #gallery-section a background color

--- a/less/gallery-section.less
+++ b/less/gallery-section.less
@@ -3,4 +3,6 @@
 #gallery-section {
   // put all the CSS for the homepage gallery section here
   background-color: @best-color;
+
+  a { color: green; }
 }
