individual bio background grey

--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ img {
   background-color: peachpuff;
 }
 #individual-bio {
-  background-color: green;
+  background-color: grey;
 }
 #individual-works {
   background-color: peachpuff;
