--- a/css/main.css
+++ b/css/main.css
@@ -46,5 +46,35 @@ span {
   background-color: peachpuff;
 }
 #individual-works {
-  background-color: peachpuff;
+  background-color: white;
+}
+/*img {
+width: 600px;
+height: auto;
+position: absolute;
+top: 50%;
+left: 50%;
+margin-left: -300px; /* width divided by 2 */
+#global-footer {
+  background-color: blue;
+  color: white;
+  width: 100%;
+  overflow: hidden;
+  margin: 0px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+/*#name{
+position: absolute;
+left:1500px;
+top: 50%;
+width:250px;
+left: 73.4%;
+}
+*/
+#imgContainer {
+  float: left;
+  left: 40%;
+  position: relative;
 }
