figuring out centering and sizing

--- a/less/individual-works.less
+++ b/less/individual-works.less
@@ -2,7 +2,6 @@
 
 #individual-works {
   // put all the CSS for the individual works here
-  background-color: white;
 }
 
 /*img {
@@ -35,8 +34,16 @@ left: 73.4%;
 }
 */
 
-#imgContainer{
+/*#img123{
+  float:left;
+  left:40%;
+  position: relative;
+  width:600px;
+}
+
+#img321{
   float:left;
   left:40%;
   position: relative;
 }
+*/
