added defaults.less to main.less, alpha order

--- a/less/main.less
+++ b/less/main.less
@@ -13,8 +13,7 @@
 
 @import "vendor/elements.less";
 @import "colors.less";
-@import "mission-section.less";
-@import "who-section.less";
+@import "defaults.less";
 
 @import "bios-page.less";
 @import "gallery-page.less";
@@ -23,3 +22,5 @@
 @import "global-navigation.less";
 @import "individual-bios.less";
 @import "individual-works.less";
+@import "mission-section.less";
+@import "who-section.less";
