--- a/less/global-footer.less
+++ b/less/global-footer.less
@@ -4,4 +4,8 @@
   // put all the CSS for the global footer here
   background-color: blue;
   color: white; //temporary font color so I can see against the blue
+
+  width: 100%;
+  overflow:hidden;
+  margin: 0px;
 }
