added box-model border box from Paul Irish

--- a/less/defaults.less
+++ b/less/defaults.less
@@ -1,5 +1,14 @@
 // main: main.less
 
+// http://www.paulirish.com/2012/box-sizing-border-box-ftw/
+/* apply a natural box layout model to all elements, but allowing components to change */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 .clearfix:after {
   content: "";
   display: table;
