--- a/css/main.css
+++ b/css/main.css
@@ -61,8 +61,9 @@
   display: block;
 }
 #bios-page .content {
-  margin-left: 5%;
+  clear: both;
   image: 10%;
+  text-align: center;
 }
 #gallery-page {
   background-color: pink;
