--- a/css/main.css
+++ b/css/main.css
@@ -25,21 +25,19 @@ html {
   background-repeat: no-repeat;
   background-position: center;
 }
-#bios-page .clearfix:after {
-  content: " ";
-  /* Older browser do not support empty content */
-  visibility: hidden;
-  display: block;
-  height: 0;
-  clear: both;
-}
 #bios-page span {
   display: block;
 }
 #bios-page .content {
   clear: both;
-  image: 10%;
   text-align: center;
+}
+#bios-page .member {
+  float: left;
+  width: 20%;
+}
+#bios-page .member a {
+  display: block;
 }
 #gallery-page {
   background-color: pink;
