--- a/less/bios-page.less
+++ b/less/bios-page.less
@@ -9,23 +9,19 @@
   background-repeat: no-repeat;
   background-position: center;
 
-  .clearfix:after {
-     content: " "; /* Older browser do not support empty content */
-     visibility: hidden;
-     display: block;
-     height: 0;
-     clear: both;
-  }
-
   span {
     display: block;
   }
 
-
   .content {
     clear: both;
-    image: 10%;
     text-align:center;
   }
 
+  .member {
+    float: left;
+    width: 20%;
+
+    a { display: block; }
+  }
 }
