--- a/less/colors.less
+++ b/less/colors.less
@@ -1,3 +1,12 @@
 // main: main.less
 
-@best-color: red;
+@black: #000000;
+@dark-gray: #3C3237;
+@medium-gray: #A7A7A5;
+@light-tan: #F7F3E2;
+@white: #FFFFFF;
+
+@scotch-gold: #FFCE00;
+@sello-tape: #B7D6CD;
+@purple: #876479;
+@red: #E53E30;
