--- a/less/gallery-section.less
+++ b/less/gallery-section.less
@@ -2,7 +2,7 @@
 
 #gallery-section {
   // put all the CSS for the homepage gallery section here
-  background-color: @best-color;
+  background-color: @scotch-gold;
 
 
   // CAROUSEL NAV CSS FORMATTING
