created an overall homepage stylesheet

--- a/less/main.less
+++ b/less/main.less
@@ -20,6 +20,7 @@
 @import "gallery-section.less";
 @import "global-footer.less";
 @import "global-navigation.less";
+@import "home.less";
 @import "individual-bios.less";
 @import "individual-works.less";
 @import "mission-section.less";
