--- a/less/who-section.less
+++ b/less/who-section.less
@@ -1,12 +1,12 @@
 // main: main.less
 
 #who-section {
+  background-color: @purple;
 
   .profile {
     width: 20%;
     float: left;
     text-align: center;
-    background-color: #724b65;
     margin-bottom: 2em;
 
     img {
