added styles for rows and sections in defaults

--- a/less/defaults.less
+++ b/less/defaults.less
@@ -17,6 +17,16 @@ html {
   clear: both;
 }
 
+.row {
+  width: 100%;
+  float: none;
+  clear: both;
+}
+
+.section {
+  padding: 3em 0;
+}
+
 .center {
   width: 90%;
   max-width: 1440px;
