--- a/less/who-section.less
+++ b/less/who-section.less
@@ -5,13 +5,16 @@
 
   .profile {
     width: 20%;
+    padding: 0 0.5em;
     float: left;
     text-align: center;
     margin-bottom: 2em;
 
     img {
-      width: 128px;
-      height: 128px;
+      width: 100%;
+      max-width: 128px;
+      height: auto;
+      max-height: 128px;
     }
   }
 
