created some basic .button styles
pulled them from who-section.less

--- a/less/defaults.less
+++ b/less/defaults.less
@@ -37,3 +37,18 @@ html {
   max-width: 1440px;
   margin: 0 auto;
 }
+
+.button {
+  color: @medium-gray;
+  font-family: 'Source Sans Pro', sans-serif;
+  text-decoration: none;
+  padding: 0.625em;
+  border: 2px solid @medium-gray;
+  margin: 0;
+  display: inline-block;
+
+  &:hover {
+    color: @black;
+    border-color: @black;
+  }
+}
