--- a/less/who-section.less
+++ b/less/who-section.less
@@ -18,14 +18,7 @@
     }
   }
 
-  a {
-    color: #a2a4a1;
-    font-family: 'Source Sans Pro', sans-serif;
-    text-decoration: none;
-    padding: 10px;
-    border: 2px solid #a2a4a1;
-    margin: 0;
-    display: inline-block;
+  .button {
 
     &.see-all {
       display: table;
@@ -34,19 +27,12 @@
     }
   }
 
-  a:hover {
-    color: #000000;
-
-  }
-
   .main-text {
     color: #a092a1;
     font-size: 23px;
   }
 
-.subtext {
-  color: #36112a;
-}
-
-
+  .subtext {
+    color: #36112a;
+  }
 }
