created fonts.less and added some font-sizes

--- a/less/main.less
+++ b/less/main.less
@@ -13,6 +13,7 @@
 
 @import "vendor/elements.less";
 @import "colors.less";
+@import "fonts.less";
 @import "defaults.less";
 
 @import "bios-page.less";
