got rid of the crazy blue in #global-footer

--- a/less/global-footer.less
+++ b/less/global-footer.less
@@ -2,8 +2,8 @@
 
 #global-footer {
   // put all the CSS for the global footer here
-  background-color: blue;
-  color: white; //temporary font color so I can see against the blue
+  background-color: @dark-gray;
+  color: @white;
 
   width: 100%;
   overflow:hidden;
