--- a/css/main.css
+++ b/css/main.css
@@ -123,8 +123,8 @@ html {
   display: block;
 }
 #global-footer {
-  background-color: blue;
-  color: white;
+  background-color: #3C3237;
+  color: #FFFFFF;
   width: 100%;
   overflow: hidden;
   margin: 0px;
