massive restructuring of the less directory
it’s a slightly more tangled web, but it organizes the folder immensely

--- a/less/partials/defaults.less
+++ b/less/partials/defaults.less
@@ -1,4 +1,4 @@
-// main: main.less
+// main: partials.less
 
 // http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 /* apply a natural box layout model to all elements, but allowing components to change */
