--- a/less/partials/partials.less
+++ b/less/partials/partials.less
@@ -1,4 +1,4 @@
-// out: ../css/main.css, sourcemap: true
+// main: ../main.less
 
 //\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\
 //\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\
@@ -28,8 +28,4 @@
 // • make sure that line 1 of less/main.less contains "// out: ../css/main.css"
 // • start writing your css in less/pages/contact-page.less!
 
-@import "vendor/elements.less";
-@import "modules/modules.less";
-@import "pages/pages.less";
-@import "partials/partials.less";
-@import "utils/utils.less";
+@import "defaults.less";
