--- a/less/pages/pages.less
+++ b/less/pages/pages.less
@@ -1,4 +1,4 @@
-// out: ../css/main.css, sourcemap: true
+// main: ../main.less
 
 //\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\
 //\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\
@@ -28,8 +28,13 @@
 // • make sure that line 1 of less/main.less contains "// out: ../css/main.css"
 // • start writing your css in less/pages/contact-page.less!
 
-@import "vendor/elements.less";
-@import "modules/modules.less";
-@import "pages/pages.less";
-@import "partials/partials.less";
-@import "utils/utils.less";
+@import "homepage/home.less";
+@import "homepage/gallery-section.less";
+@import "homepage/intro-section.less";
+@import "homepage/mission-section.less";
+@import "homepage/who-section.less";
+
+@import "bios-page.less";
+@import "gallery-page.less";
+@import "individual-bios.less";
+@import "individual-works.less";
