--- a/less/defaults.less
+++ b/less/defaults.less
@@ -1,4 +1,4 @@
-// main: partials.less
+// main: main.less
 
 // http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 /* apply a natural box layout model to all elements, but allowing components to change */
