--- a/less/main.less
+++ b/less/main.less
@@ -8,28 +8,21 @@
 //\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\
 //\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\//\\
 
-// Create a new .less file inside of the appropriate subfolder in the less/ folder.
-// Import that file into the .less file with the same name as the folder it is in.
-// e.g. import less/utils/colors.less into less/utils/utils.less by using the same
-// @import syntax below. Also make sure that line #1 of your file points to the same
-// .less file that it is being imported into so that it will correctly be compiled
-// on save. Then import the .less file with the same name as the folder it
-// is in into the less/main.less file using the same @import syntax below. Again, make
-// sure that line #1 of that file points to the same file that it is being imported
-// into so it will be correctly compiled.
-
-// Example steps:
-// • create contact-page.less file
-// • put contact-page.less file into less/pages/ folder
-// • add '// main: pages.less' to line 1 of contact-page.less
-// • add '@import "contact-page.less";' to the list of imports in less/pages/pages.less
-// • add '// main: ../main.less' to line 1 of pages.less (if it is not already there)
-// • add '@import "pages/pages.less";'to the list of imports in less/main.less (if it is not already there)
-// • make sure that line 1 of less/main.less contains "// out: ../css/main.css"
-// • start writing your css in less/pages/contact-page.less!
+// Create a new .less file inside of the less folder.
+// Import that file into this file by using the @import syntax below.
 
 @import "vendor/elements.less";
-@import "modules/modules.less";
-@import "pages/pages.less";
-@import "partials/partials.less";
-@import "utils/utils.less";
+@import "colors.less";
+@import "fonts.less";
+@import "defaults.less";
+
+@import "bios-page.less";
+@import "gallery-page.less";
+@import "gallery-section.less";
+@import "global-footer.less";
+@import "global-navigation.less";
+@import "home.less";
+@import "individual-bios.less";
+@import "individual-works.less";
+@import "mission-section.less";
+@import "who-section.less";
