--- a/less/bios-page.less
+++ b/less/bios-page.less
@@ -2,37 +2,32 @@
 
 #bios-page {
   // put all the CSS for the bios page here
-  background-color: white;
 
-}
-
-.clearfix:after {
-   content: " "; /* Older browser do not support empty content */
-   visibility: hidden;
-   display: block;
-   height: 0;
-   clear: both;
-}
-
-
-body {
-
-  background-image: url("../images/bios/backgroundbio.png");
+  background-image: url("../images/bios/backgroundbio.jpg");
   background-size: 120%;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
-}
 
-span {
-  display: block;
-}
+  .clearfix:after {
+     content: " "; /* Older browser do not support empty content */
+     visibility: hidden;
+     display: block;
+     height: 0;
+     clear: both;
+  }
 
-.background {
-  background-color: black;
-}
+  span {
+    display: block;
+  }
 
-.content {
-  margin-left: 5%;
-  image: 10%;
+  .background {
+    background-color: black;
+  }
+
+  .content {
+    margin-left: 5%;
+    image: 10%;
+  }
+
 }
