less files in /modules are correctly mapping up to modules.less now

--- a/less/modules/global-navigation.less
+++ b/less/modules/global-navigation.less
@@ -1,6 +1,7 @@
-// main: main.less
+// main: modules.less
 
 #global-navigation {
   // put all the CSS for the global navigation here
-  background-color: peachpuff;
+  background-color: @dark-gray;
+  color: @white;
 }
