swapped all colors I could find to use our color palette now

--- a/less/pages/gallery-page.less
+++ b/less/pages/gallery-page.less
@@ -2,7 +2,7 @@
 
 #gallery-page {
   // put all the CSS for the gallery page here
-  background-color: pink;
+  background-color: @red;
 
   .gallery {
 
