--- a/less/pages/homepage/gallery-section.less
+++ b/less/pages/homepage/gallery-section.less
@@ -17,19 +17,19 @@
         width: 9px;
         height: 9px;
         margin-left: 15px;
-        border: 1px solid #9a9b9c;
+        border: 1px solid @medium-gray;
         border-radius: 20px;
-        background-color: #fff;
+        background-color: @white;
         transition: background-color .2s ease-out;
         -webkit-transition: background-color .2s ease-out;
         -moz-transition: background-color .2s ease-out;
 
         &:hover {
-          background-color: #dddfe0;
+          background-color: @light-tan;
         }
 
         &.active {
-          background-color: #9a9b9c;
+          background-color: @medium-gray;
         }
       }
     }
