--- a/less/pages/homepage/who-section.less
+++ b/less/pages/homepage/who-section.less
@@ -28,11 +28,11 @@
   }
 
   .main-text {
-    color: #a092a1;
+    color: lighten(@purple, 10%);
     font-size: 23px;
   }
 
   .subtext {
-    color: #36112a;
+    color: darken(@purple, 30%);
   }
 }
