updated #gallery-section nav styles to target <button> instead of <a>
some tweaking too

--- a/less/pages/homepage/gallery-section.less
+++ b/less/pages/homepage/gallery-section.less
@@ -12,13 +12,14 @@
       // float: right;
       margin-top: 8px;
 
-      a {
+      button {
         float: left;
-        width: 9px;
-        height: 9px;
-        margin-left: 15px;
-        border: 1px solid @medium-gray;
-        border-radius: 20px;
+        width: 1em;
+        height: 1em;
+        padding: 0;
+        margin-left: 1em;
+        border: @hairline solid @medium-gray;
+        border-radius: 100%;
         background-color: @white;
         transition: background-color .2s ease-out;
         -webkit-transition: background-color .2s ease-out;
@@ -64,7 +65,7 @@
       // }
     }
 
-    a,
+    button,
     img {
       display: block;
     }
