--- a/less/pages/homepage/gallery-section.less
+++ b/less/pages/homepage/gallery-section.less
@@ -68,6 +68,12 @@
     button,
     img {
       display: block;
+      box-shadow: 10px 0px 5px #888888;
     }
   }
+}
+
+
+#photolink {
+  margin: auto;
 }
