--- a/less/pages/individual-bios.less
+++ b/less/pages/individual-bios.less
@@ -5,6 +5,18 @@
   background-color: @medium-gray;
 
   .member {
+    width: 30%;
+    margin-top: 5%;
+    float: left;
+    text-align: center;
+  }
+
+  .art {
     width: 20%;
+    margin: 20px;
+    border: 20px solid black;
+    float: right;
+    width: 300px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   }
 }
