--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,13 @@
 #individual-bio {
   background-color: #A7A7A5;
 }
+#individual-bio .textbox {
+  margin: 30px;
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity: 0.6;
+  filter: alpha(opacity=60);
+}
 #individual-bio .member {
   width: 30%;
   margin-top: 5%;
