--- a/less/pages/individual-bios.less
+++ b/less/pages/individual-bios.less
@@ -4,6 +4,14 @@
 
   background-color: @medium-gray;
 
+  .textbox {
+    margin: 30px;
+    background-color: #ffffff;
+    border: 1px solid black;
+    opacity: 0.6;
+    filter: alpha(opacity=60); 
+  }
+
   .member {
     width: 30%;
     margin-top: 5%;
