--- a/less/pages/individual-bios.less
+++ b/less/pages/individual-bios.less
@@ -5,11 +5,10 @@
   background-color: @medium-gray;
 
   .textbox {
-    margin: 30px;
-    background-color: #ffffff;
-    border: 1px solid black;
-    opacity: 0.6;
-    filter: alpha(opacity=60); 
+    margin: 10%;
+    background-color: @light-tan;
+    padding: 20px;
+
   }
 
   .member {
