--- a/less/pages/individual-bios.less
+++ b/less/pages/individual-bios.less
@@ -13,12 +13,21 @@
 
   .member {
     width: 30%;
-    margin-top: 5%;
     float: left;
     text-align: center;
   }
 
-  .art {
+  .alisonart1,
+  .alisonart2,
+  .courtneyart1,
+  .deannaart1,
+  .deannaart2,
+  .nikkiart1,
+  .nikkiart2,
+  .nikkiart3,
+  .phoebeart1,
+  .phoebeart2,
+  .phoebeart3 {
     width: 20%;
     margin: 20px;
     border: 20px solid black;
