Added logo to navigation, started positioning
I didn’t realize my .less files were moved to the modules folder, that
was fun.

--- a/less/modules/global-navigation.less
+++ b/less/modules/global-navigation.less
@@ -4,4 +4,21 @@
   // put all the CSS for the global navigation here
   background-color: @dark-gray;
   color: @white;
+  padding: 0px;
+
+
+       ul {
+        float: right;
+        margin-top: 3.5%;
+      }
+
+     li{
+        display: inline;
+      }
+
+     img {
+         float: left;
+         width: 10%;
+    }
+
 }
