--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,18 @@
 #global-navigation {
   background-color: #3C3237;
   color: #FFFFFF;
+  padding: 0px;
+}
+#global-navigation ul {
+  float: right;
+  margin-top: 3.5%;
+}
+#global-navigation li {
+  display: inline;
+}
+#global-navigation img {
+  float: left;
+  width: 10%;
 }
 #home {
   background-color: #F7F3E2;
