--- a/less/pages/individual-works.less
+++ b/less/pages/individual-works.less
@@ -4,35 +4,52 @@
   // put all the CSS for the individual works here
 }
 
-/*img {
+#image {
 width: 600px;
 height: auto;
-position: absolute;
-top: 50%;
-left: 50%;
-margin-left: -300px; /* width divided by 2 */
-//margin-top: -447px; /* height divided by 2 */
-//}
+margin: auto;
+display: block;
+}
 
-/*#name{
+#name{
 position: absolute;
 left:1500px;
 top: 50%;
 width:250px;
 left: 73.4%;
 }
-*/
 
-/*#img123{
-  float:left;
-  left:40%;
-  position: relative;
-  width:600px;
+#global-navigation {
+  background-color: #3C3237;
+  color: #FFFFFF;
+  padding: 0px;
+}
+#global-navigation ul {
+  float: right;
+  margin-top: 3.5%;
+
+}
+#global-navigation li {
+  display: inline;
+}
+#global-navigation img {
+  max-width: 140px;
+  min-width: 140px;
+  height: auto;
+  margin: auto;
+  display: block;
+
 }
 
-#img321{
-  float:left;
-  left:40%;
-  position: relative;
+#individual-name{
+font-family: 'Source Sans Pro', sans-serif;
+background-color: #876479;
+margin-top: 0 auto;
+display:block;
+text-align: center;
+margin: auto;
 }
-*/
+
+body{
+  background-color: @light-tan;
+}
