--- a/less/pages/individual-works.less
+++ b/less/pages/individual-works.less
@@ -5,18 +5,18 @@
 }
 
 #image {
-width: 600px;
-height: auto;
-margin: auto;
-display: block;
+  margin: auto;
+  display: block;
+  width: 800px;
+  height: auto;
 }
 
-#name{
-position: absolute;
-left:1500px;
-top: 50%;
-width:250px;
-left: 73.4%;
+#global-footer{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  margin: 0px;
 }
 
 #global-navigation {
@@ -38,16 +38,8 @@ left: 73.4%;
   height: auto;
   margin: auto;
   display: block;
-
-}
-
-#individual-name{
-font-family: 'Source Sans Pro', sans-serif;
-background-color: #876479;
-margin-top: 0 auto;
-display:block;
-text-align: center;
-margin: auto;
+  left: 0;
+  bottom: 0;
 }
 
 body{
