changed color to palette

--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,7 @@
 }
 #gallery-page {
   background-color: #E53E30;
+  background-color: #B7D6CD;
 }
 #gallery-page .gallery img {
   max-width: 300px;
